// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return messages object with default messageKey 1`] = `
{
  "The device is now private or deleted.": {
    "": [
      {
        "id": "App.errorMessage",
        "description": "The error message when api response as 404 not found",
        "defaultMessage": "The device is now private or deleted.",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "Go to MCS website": {
    "": [
      {
        "id": "App.errorButton",
        "description": "Click error Button",
        "defaultMessage": "Go to MCS website",
        "filename": "./test/messages/src/containers/App/App.json"
      },
      {
        "id": "NotFound.errorButton",
        "description": "Click error Button",
        "defaultMessage": "Go to MCS website",
        "filename": "./test/messages/src/containers/NotFound/messages.json"
      }
    ]
  },
  "Creator": {
    "": [
      {
        "id": "App.Creator 1",
        "description": "Creator 1",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/App/App.json"
      },
      {
        "id": "App.Creator 2",
        "description": "Creator 2",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/App/App.json"
      },
      {
        "id": "NotFound.Creator",
        "description": "Creator",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/NotFound/messages.json"
      }
    ]
  },
  "": {
    "": [
      {
        "id": "App.Creator Empty message",
        "description": "An Empty message",
        "defaultMessage": "",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  }
}
`;

exports[`should return messages object with description as key 1`] = `
{
  "The error message when api response as 404 not found": {
    "": [
      {
        "id": "App.errorMessage",
        "description": "The error message when api response as 404 not found",
        "defaultMessage": "The device is now private or deleted.",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "Click error Button": {
    "": [
      {
        "id": "App.errorButton",
        "description": "Click error Button",
        "defaultMessage": "Go to MCS website",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "Creator 1": {
    "": [
      {
        "id": "App.Creator 1",
        "description": "Creator 1",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "Creator 2": {
    "": [
      {
        "id": "App.Creator 2",
        "description": "Creator 2",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "An Empty message": {
    "": [
      {
        "id": "App.Creator Empty message",
        "description": "An Empty message",
        "defaultMessage": "",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  }
}
`;

exports[`should return messages object with id as context 1`] = `
{
  "The device is now private or deleted.": {
    "App.errorMessage": [
      {
        "id": "App.errorMessage",
        "description": "The error message when api response as 404 not found",
        "defaultMessage": "The device is now private or deleted.",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "Go to MCS website": {
    "App.errorButton": [
      {
        "id": "App.errorButton",
        "description": "Click error Button",
        "defaultMessage": "Go to MCS website",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ],
    "NotFound.errorButton": [
      {
        "id": "NotFound.errorButton",
        "description": "Click error Button",
        "defaultMessage": "Go to MCS website",
        "filename": "./test/messages/src/containers/NotFound/messages.json"
      }
    ]
  },
  "Creator": {
    "App.Creator 1": [
      {
        "id": "App.Creator 1",
        "description": "Creator 1",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ],
    "App.Creator 2": [
      {
        "id": "App.Creator 2",
        "description": "Creator 2",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ],
    "NotFound.Creator": [
      {
        "id": "NotFound.Creator",
        "description": "Creator",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/NotFound/messages.json"
      }
    ]
  },
  "": {
    "App.Creator Empty message": [
      {
        "id": "App.Creator Empty message",
        "description": "An Empty message",
        "defaultMessage": "",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  }
}
`;

exports[`should return messages object with id as key 1`] = `
{
  "App.errorMessage": {
    "": [
      {
        "id": "App.errorMessage",
        "description": "The error message when api response as 404 not found",
        "defaultMessage": "The device is now private or deleted.",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "App.errorButton": {
    "": [
      {
        "id": "App.errorButton",
        "description": "Click error Button",
        "defaultMessage": "Go to MCS website",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "App.Creator 1": {
    "": [
      {
        "id": "App.Creator 1",
        "description": "Creator 1",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "App.Creator 2": {
    "": [
      {
        "id": "App.Creator 2",
        "description": "Creator 2",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "App.Creator Empty message": {
    "": [
      {
        "id": "App.Creator Empty message",
        "description": "An Empty message",
        "defaultMessage": "",
        "filename": "./test/messages/src/containers/App/App.json"
      }
    ]
  },
  "NotFound.errorButton": {
    "": [
      {
        "id": "NotFound.errorButton",
        "description": "Click error Button",
        "defaultMessage": "Go to MCS website",
        "filename": "./test/messages/src/containers/NotFound/messages.json"
      }
    ]
  },
  "NotFound.Creator": {
    "": [
      {
        "id": "NotFound.Creator",
        "description": "Creator",
        "defaultMessage": "Creator",
        "filename": "./test/messages/src/containers/NotFound/messages.json"
      }
    ]
  }
}
`;
